<resources>
    <string name="app_name">My Application</string>
    <string name="back">Back</string>
    <string name="movie_name_text">Avengers: End Game</string>
    <string name="age_limit">%1$d+</string>
    <string name="genres">Action, Adventure, Fantasy</string>
    <string name="num_of_reviews">125</string>
    <string name="reviews">REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="short_story">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="person1_name">Robert Downey Jr.</string>
    <string name="person2_name">Chris  Evans</string>
    <string name="person4_name">Chris Hemsworth</string>
    <string name="person3_name">Mark Ruffalo</string>
    <string name="movie_list">Movie List</string>
    <string name="movie_duration">137</string>
    <string name="min">MIN</string>
    <string name="no_cast">Cast not available</string>
</resources>