<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/background_image1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <LinearLayout
            android:id="@+id/back_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/back"
                android:textColor="@color/gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/age_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="154dp"
            android:lineSpacingExtra="4sp"
            android:padding="4dp"
            android:text="@string/age_limit"
            android:textColor="@color/whitish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_layout" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:text="@string/movie_name_text"
            android:textColor="@color/whitish"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/age_limit" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:text="@string/genres"
            android:textColor="@color/red"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <LinearLayout
            android:id="@+id/reviews_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/genres">

            <ImageView
                android:id="@+id/star1"
                style="@style/review_star"
                android:src="@drawable/star_on" />

            <ImageView
                android:id="@+id/star2"
                style="@style/review_star"
                android:src="@drawable/star_on" />

            <ImageView
                android:id="@+id/star3"
                style="@style/review_star"
                android:src="@drawable/star_on" />

            <ImageView
                android:id="@+id/star4"
                style="@style/review_star"
                android:src="@drawable/star_on" />

            <ImageView
                android:id="@+id/star5"
                style="@style/review_star"
                android:src="@drawable/star_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/num_of_reviews"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/reviews"
                android:textColor="@color/gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/storyline"
            android:textColor="@color/whitish"
            app:layout_constraintTop_toBottomOf="@+id/reviews_layout" />

        <TextView
            android:id="@+id/short_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/short_story"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/storyline" />


        <TextView
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cast"
            android:textColor="@color/whitish"
            app:layout_constraintTop_toBottomOf="@+id/short_story" />

        <ImageView
            android:id="@+id/person1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/person1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/person2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <ImageView
            android:id="@+id/person2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/person2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/person3"
            app:layout_constraintStart_toEndOf="@id/person1"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <ImageView
            android:id="@+id/person3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/person3"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/person4"
            app:layout_constraintStart_toEndOf="@id/person2"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <ImageView
            android:id="@+id/person4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/person4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/person3"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <TextView
            android:id="@+id/person1_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            android:text="@string/person1_name"
            android:textColor="@color/whitish"
            app:layout_constraintEnd_toEndOf="@id/person1"
            app:layout_constraintStart_toStartOf="@id/person1"
            app:layout_constraintTop_toBottomOf="@+id/person1" />

        <TextView
            android:id="@+id/person2_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            android:text="@string/person2_name"
            android:textColor="@color/whitish"
            app:layout_constraintEnd_toEndOf="@id/person2"
            app:layout_constraintStart_toStartOf="@id/person2"
            app:layout_constraintTop_toBottomOf="@+id/person2"

            />

        <TextView
            android:id="@+id/person3_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            android:text="@string/person3_name"
            android:textColor="@color/whitish"
            app:layout_constraintEnd_toEndOf="@id/person3"
            app:layout_constraintStart_toStartOf="@id/person3"
            app:layout_constraintTop_toBottomOf="@+id/person3"

            />

        <TextView
            android:id="@+id/person4_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            android:text="@string/person4_name"
            android:textColor="@color/whitish"
            app:layout_constraintEnd_toEndOf="@id/person4"
            app:layout_constraintStart_toStartOf="@id/person4"
            app:layout_constraintTop_toBottomOf="@+id/person4"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>