<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MovieDetailsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/horizontal_dist" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/vertical_dist" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/horizontal_dist" />

        <ImageView
            android:id="@+id/preview_movie_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="Avengers image"
            android:scaleType="centerCrop"
            android:src="@drawable/avengers"
            android:foreground="@drawable/foreground_darkener"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/genres" />

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Back arrow"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/top_line" />

        <TextView
            android:id="@+id/back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/gray"
            app:layout_constraintStart_toEndOf="@id/back_img"
            app:layout_constraintTop_toTopOf="@id/back_img" />

        <TextView
            android:id="@+id/pg_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin_in_details"
            android:text="@string/age_limit"
            android:textColor="@color/whitish"
            app:layout_constraintStart_toStartOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@+id/back_img" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dist_12dp"
            android:text="@string/movie_name_text"
            android:textColor="@color/whitish"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@+id/pg_age" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:layout_marginEnd="@dimen/dist_8dp"
            android:text="@string/genres"
            android:textColor="@color/red"
            android:maxLines="2"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <ImageView
            android:id="@+id/star1"
            style="@style/review_star"
            android:src="@drawable/star_off"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/genres" />

        <ImageView
            android:id="@+id/star2"
            style="@style/review_star"
            android:src="@drawable/star_off"
            app:layout_constraintStart_toEndOf="@id/star1"
            app:layout_constraintTop_toBottomOf="@id/genres" />

        <ImageView
            android:id="@+id/star3"
            style="@style/review_star"
            android:src="@drawable/star_off"
            app:layout_constraintStart_toEndOf="@id/star2"
            app:layout_constraintTop_toBottomOf="@id/genres" />

        <ImageView
            android:id="@+id/star4"
            style="@style/review_star"
            android:src="@drawable/star_off"
            app:layout_constraintStart_toEndOf="@id/star3"
            app:layout_constraintTop_toBottomOf="@id/genres" />

        <ImageView
            android:id="@+id/star5"
            style="@style/review_star"
            android:src="@drawable/star_off"
            app:layout_constraintStart_toEndOf="@id/star4"
            app:layout_constraintTop_toBottomOf="@id/genres" />

        <TextView
            android:id="@+id/num_of_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dist_8dp"
            android:text="@string/num_of_reviews"
            android:textColor="@color/gray"
            app:layout_constraintStart_toEndOf="@id/star5"
            app:layout_constraintTop_toBottomOf="@id/genres" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dist_5dp"
            android:text="@string/reviews"
            android:textColor="@color/gray"
            app:layout_constraintStart_toEndOf="@id/num_of_reviews"
            app:layout_constraintTop_toBottomOf="@id/genres" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_dist"
            android:text="@string/storyline"
            android:textColor="@color/whitish"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@+id/num_of_reviews" />

        <TextView
            android:id="@+id/short_story"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dist_10dp"
            android:paddingTop="@dimen/dist_5dp"
            android:paddingBottom="@dimen/dist_5dp"
            android:text="@string/short_story"
            android:textColor="@color/gray"
            android:textSize="@dimen/short_story_size"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_dist"
            android:text="@string/cast"
            android:textColor="@color/whitish"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@+id/short_story"
            />

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/actors_recycler_view"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/cast"
           app:layout_constraintStart_toStartOf="@id/start_line"
           app:layout_constraintEnd_toEndOf="@id/end_line"
           android:layout_marginTop="6dp"
           android:orientation="horizontal"
           tools:listitem="@layout/view_holder_actor"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>