<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieDetailsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/horizontal_dist" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/vertical_dist" />


        <ImageView
            android:id="@+id/target_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/top_line"
            app:srcCompat="@drawable/target_blur"

            />

        <TextView
            android:id="@+id/movie_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dist_8dp"
            android:text="@string/movie_list"
            android:textColor="@color/whitish"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/target_img"
            app:layout_constraintStart_toEndOf="@+id/target_img"
            app:layout_constraintTop_toBottomOf="@id/top_line" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_card_layout"
            android:layout_width="@dimen/movie_card_width"
            android:layout_height="@dimen/movie_card_height"
            android:layout_marginTop="@dimen/dist_27dp"
            android:background="@drawable/rounded_cardview_bg"
            android:elevation="2dp"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@+id/movie_list">

            <ImageView
                android:id="@+id/movie_card_img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_card"
                app:layout_constraintEnd_toEndOf="@id/movie_card_layout"
                app:layout_constraintStart_toStartOf="@id/movie_card_layout"
                app:layout_constraintTop_toTopOf="@id/movie_card_layout" />


            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/mask_card_fg"
                app:layout_constraintBottom_toBottomOf="@id/movie_card_img"
                app:layout_constraintEnd_toEndOf="@id/movie_card_img"
                app:layout_constraintStart_toStartOf="@id/movie_card_img"
                app:layout_constraintTop_toTopOf="@id/movie_card_img" />

            <TextView
                android:id="@+id/pg_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dist_5dp"
                android:layout_marginTop="@dimen/dist_12dp"
                android:background="@drawable/opacity_bg"
                android:fontFamily="@font/roboto_black"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/pg_age"
                android:textColor="@color/whitish"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dist_12dp"
                android:layout_marginEnd="@dimen/dist_8dp"
                android:src="@drawable/ic_like"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dist_8dp"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/genres"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_8sp"
                app:layout_constraintBottom_toBottomOf="@id/movie_card_img"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="@dimen/dist_10dp"
                android:src="@drawable/star_off"
                app:layout_constraintStart_toStartOf="@id/genres"
                app:layout_constraintTop_toBottomOf="@id/genres"
                app:tint="@color/red" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dist_2dp"
                android:src="@drawable/star_off"
                app:layout_constraintBottom_toBottomOf="@id/star1"
                app:layout_constraintStart_toEndOf="@id/star1"
                app:layout_constraintTop_toTopOf="@id/star1"
                app:tint="@color/red" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dist_2dp"
                android:src="@drawable/star_off"
                app:layout_constraintBottom_toBottomOf="@id/star2"
                app:layout_constraintStart_toEndOf="@id/star2"
                app:layout_constraintTop_toTopOf="@id/star2"
                app:tint="@color/red" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dist_2dp"
                android:src="@drawable/star_off"
                app:layout_constraintBottom_toBottomOf="@id/star3"
                app:layout_constraintStart_toEndOf="@id/star3"
                app:layout_constraintTop_toTopOf="@id/star3"
                app:tint="@color/red" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dist_2dp"
                android:src="@drawable/star_off"
                app:layout_constraintBottom_toBottomOf="@id/star4"
                app:layout_constraintStart_toEndOf="@id/star4"
                app:layout_constraintTop_toTopOf="@id/star4"
                app:tint="@color/gray"

                />

            <TextView
                android:id="@+id/num_of_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dist_5dp"
                android:layout_marginTop="@dimen/dist_2dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/num_of_reviews"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_8sp"
                app:layout_constraintBottom_toBottomOf="@id/star5"
                app:layout_constraintStart_toEndOf="@id/star5"
                app:layout_constraintTop_toTopOf="@id/star5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dist_2dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/reviews"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_8sp"
                app:layout_constraintStart_toEndOf="@id/num_of_reviews"
                app:layout_constraintTop_toTopOf="@id/num_of_reviews" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dist_8dp"
                android:layout_marginTop="@dimen/dist_8dp"
                android:fontFamily="@font/roboto_black"
                android:maxLines="2"
                android:text="@string/movie_name_text"
                android:textColor="@color/whitish"
                android:textSize="@dimen/movie_title_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_card_img" />

            <TextView
                android:id="@+id/movie_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dist_8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/movie_duration"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_8sp"
                app:layout_constraintStart_toStartOf="@id/movie_title"
                app:layout_constraintTop_toBottomOf="@id/movie_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>